--- a/source/server/package.json
+++ b/source/server/package.json
@@ -8,14 +8,18 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.18.3",
-    "morgan": "~1.9.1"
+    "firebase": "^10.10.0",
+    "firebase-admin": "^12.0.0",
+    "morgan": "~1.9.1",
+    "dotenv": "~16.4.5"
   },
-    "devDependencies": {
-        "nodemon": "^2.0.7"
-    },
-    "description": "server",
-    "author": "kamilr616",
-    "license": "MIT"
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
+  "description": "server",
+  "author": "kamilr616",
+  "license": "MIT"
 }
