react sensor charts

--- a/source/server/api/package.json
+++ b/source/server/api/package.json
@@ -22,7 +22,8 @@
     "joi": "17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "8.2.1",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -30,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "1.9.3",
     "@types/node": "^14.18.33",
+    "@types/cors": "^2.8.17",
     "node-gyp": "^10.1.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.1",
