--- a/source/web/smart_city_hub Web App/package.json
+++ b/source/web/smart_city_hub Web App/package.json
@@ -15,7 +15,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.14",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.2.1",
+    "axios": "^1.6.7",
+    "base-64": "^1.0.0",
+    "chart.js": "^4.4.2",
+    "react-chartjs-2": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
