--- a/source/web/react/.env
+++ b/source/web/react/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:4200/api
-VITE_ENCRYPTION_KEY = 12312312
+VITE_API_URL="http://localhost:4200/api"
+VITE_ENCRYPTION_KEY=12312312
